--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d dist"
 	},
-	"homepage": "https://geraldev.github.io/zen-attitude",
+	"homepage": "https://geraldine-l.github.io/zen-attitude",
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
